--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Квиз по анатомии</title>
-  <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#4986CC">
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Квиз по анатомии</title>
+    <!-- Подключаем VK Bridge -->
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
 </head>
 <body>
-  <div id="app"></div>
-  
-  <!-- Подключение JS файла с приложением -->
-  <script src="app.js"></script>
+    <div id="app">
+        <!-- Здесь будет отображаться контент приложения -->
+        <div class="loading-container">
+            <div class="loading-spinner"></div>
+            <p>Загрузка...</p>
+        </div>
+    </div>
+
+    <!-- Подключаем скрипты приложения -->
+    <script src="quiz-data.js"></script>
+    <script src="ui-components.js"></script>
+    <script src="vk-integration.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
