--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     
     <script src="js/questions.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/enhancements.js"></script>
 </body>
 </html>
