--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- VK Bridge должен быть загружен первым -->
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
-    <!-- Встроенные стили вместо внешнего файла -->
+    <script>
+        // Обеспечиваем доступность VK Bridge как глобальной переменной
+        if (window.vkBridge) {
+            window.vkBridgeInstance = window.vkBridge;
+        }
+    </script>
+    <!-- Встроенные стили -->
     <style>
         /* Определение переменных для светлой темы (по умолчанию) */
         :root {
