--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         }
     </script>
     <link rel="stylesheet" href="style.css">
+    <!-- Сначала загружаем вопросы, затем основной скрипт -->
+    <script src="questions.js"></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -99,9 +102,5 @@
             &copy; 2025 Анатомический квиз
         </div>
     </div>
-
-    <!-- Подключение файлов скриптов -->
-    <script src="questions.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
