--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Анатомический квиз</h1>
+            <h1>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-right: 8px;">
+                    <path d="M12 15a3 3 0 100-6 3 3 0 000 6z" fill="#4a76a8"/>
+                    <path d="M3 12c0 5 4 9 9 9s9-4 9-9-4-9-9-9-9 4-9 9zm2 0a7 7 0 1114 0 7 7 0 01-14 0z" fill="#4a76a8"/>
+                </svg>
+                Анатомический квиз
+            </h1>
             <div id="user-info" class="user-info"></div>
         </div>
         
@@ -102,5 +108,8 @@
             &copy; 2025 Анатомический квиз
         </div>
     </div>
+    
+    <!-- Загрузчик улучшений интерфейса -->
+    <script src="enhancements-loader.js"></script>
 </body>
 </html>
