--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
         </div>
     </div>
     
-    <!-- Загрузчик улучшений интерфейса -->
+    <!-- Загрузка улучшений -->
+    <script src="enhanced-styles.css"></script>
+    <script src="animated-background.js"></script>
+    <script src="enhanced-sharing.js"></script>
+    <script src="sound-effects.js"></script>
     <script src="enhancements-loader.js"></script>
 </body>
 </html>
