--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <script src="animated-background.js"></script>
     <script src="enhanced-sharing.js"></script>
     <script src="sound-effects.js"></script>
+    <script src="dancing-skeleton.js"></script>
     <script src="enhancements-loader.js"></script>
 </body>
 </html>
