--- a/index.html
+++ b/index.html
@@ -75,14 +75,7 @@
                     </div>
                 </div>
                 
-                <!-- Селектор сложности -->
-                <div class="difficulty-selector">
-                    <h3>Выберите уровень сложности:</h3>
-                    <div class="difficulty-buttons">
-                        <button id="normal-difficulty" class="difficulty-btn active">Обычный</button>
-                        <button id="hard-difficulty" class="difficulty-btn">Сложный</button>
-                    </div>
-                </div>
+                <!-- Селектор сложности будет добавлен автоматически -->
                 
                 <button id="start-quiz" class="btn-start">Начать тест</button>
             </div>
@@ -125,6 +118,6 @@
     <script src="sound-effects.js"></script>
     <script src="dancing-skeleton.js"></script>
     <script src="enhancements-loader.js"></script>
-    <script src="difficulty-manager.js"></script>
+    <script src="standalone-difficulty-manager.js"></script>
 </body>
 </html>
