--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         }
     </script>
     <link rel="stylesheet" href="style.css">
+    <!-- Дополнительные стили -->
+    <link rel="stylesheet" href="enhanced-styles.css">
     <!-- Сначала загружаем вопросы, затем основной скрипт -->
     <script src="questions.js"></script>
     <script src="app.js" defer></script>
@@ -111,8 +113,7 @@
         </div>
     </div>
     
-    <!-- Загрузка улучшений -->
-    <script src="enhanced-styles.css"></script>
+    <!-- Загрузка улучшений и скриптов -->
     <script src="animated-background.js"></script>
     <script src="enhanced-sharing.js"></script>
     <script src="sound-effects.js"></script>
