--- a/index.html
+++ b/index.html
@@ -1,77 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Медицинский квиз</title>
-  <!-- Подключение шрифта Roboto -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <!-- Подключение стилей -->
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Медицинский Квиз</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- questions.js и difficult-questions.json загружаются динамически в app.js -->
 </head>
 <body>
-  <div class="container">
     <!-- Стартовый экран -->
     <div id="start-screen">
-      <header class="header">
-        <h1>Медицинский квиз</h1>
-        <p>Проверьте свои знания анатомии человека!</p>
-        <div class="user-info" id="user-info">
-          <!-- Информация о пользователе будет добавлена через JS -->
+        <div id="user-info" class="user-info"></div>
+        <h1>Медицинский Квиз</h1>
+        <div class="difficulty-selection">
+            <h2>Выберите уровень сложности:</h2>
+            <button class="difficulty-btn active" data-difficulty="easy">Обычный</button>
+            <button class="difficulty-btn" data-difficulty="hard">Сложный</button>
         </div>
-      </header>
-
-      <div class="image-container">
-        <img src="images/doctor.png" alt="Доктор Рик" class="header-image">
-      </div>
-
-      <div class="mode-difficulty-wrapper">
-        <div class="difficulty-selector">
-          <button class="difficulty-btn" data-difficulty="easy">Общий</button>
-          <button class="difficulty-btn" data-difficulty="hard">Сложный</button>
+        <div class="quiz-mode-selection">
+            <h2>Выберите режим:</h2>
+            <button class="quiz-mode-btn active" data-mode="anatomy">Анатомия</button>
+            <button class="quiz-mode-btn" data-mode="clinical">Клиническое мышление</button>
+            <button class="quiz-mode-btn" data-mode="pharmacology">Фармакология</button>
         </div>
-        <div class="quiz-mode-selector">
-          <button class="quiz-mode-btn" data-mode="anatomy">Анатомия</button>
-          <button class="quiz-mode-btn" data-mode="clinical">Клиническое мышление</button>
-          <button class="quiz-mode-btn" data-mode="pharmacology">Фармакология</button>
-        </div>
-      </div>
-
-      <button class="btn-start" id="start-quiz">Начать тест</button>
+        <button id="start-quiz" class="btn-primary">Начать квиз</button>
+        <!-- Здесь будут отображаться предыдущие результаты -->
     </div>
 
     <!-- Экран квиза -->
     <div id="quiz-container" style="display: none;">
-      <header class="header">
-        <h1>Медицинский квиз</h1>
-        <div class="user-info" id="user-info-quiz">
-          <!-- Информация о пользователе будет добавлена через JS -->
+        <div id="user-info-quiz" class="user-info"></div>
+        <div id="question-counter" class="question-counter"></div>
+        <div id="progress-bar-container">
+            <div id="progress-bar"></div>
         </div>
-      </header>
-
-      <div class="progress-container">
-        <div id="progress-bar"></div>
-      </div>
-      <div id="question-counter"></div>
-      <div id="question"></div>
-      <div id="options"></div>
-      <button id="next-question" disabled>Далее</button>
+        <div id="timer" class="timer"></div>
+        <div id="question" class="question"></div>
+        <div id="options" class="options"></div>
+        <button id="next-question" class="btn-primary" disabled>Далее</button>
     </div>
 
     <!-- Экран результатов -->
     <div id="results-container" style="display: none;">
-      <header class="header">
-        <h1>Результаты</h1>
-      </header>
-      <div id="score"></div>
-      <button id="share-results">Поделиться</button>
-      <button id="restart-quiz">Пройти заново</button>
+        <div id="score" class="score"></div>
+        <div class="results-buttons">
+            <button id="share-results" class="btn-primary">Поделиться</button>
+            <button id="restart-quiz" class="btn-secondary">Начать заново</button>
+        </div>
     </div>
-  </div>
 
-  <!-- Подключение VK Bridge -->
-  <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
-  <!-- Подключение скриптов -->
-  <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
