--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
         </div>
     </div>
 
+    <!-- Экран квиза - исправленная позиция в документе -->
+    <div id="quiz-container" style="display: none;">
+        <div id="user-info-quiz" class="user-info"></div>
+        <div id="question-counter" class="question-counter"></div>
+        <div id="progress-bar-container">
+            <div id="progress-bar"></div>
+        </div>
+        <div id="timer" class="timer"></div>
+        <div id="question" class="question"></div>
+        <div id="options" class="options"></div>
+        <div class="quiz-buttons">
+            <button id="next-question" class="btn-primary" disabled>Далее</button>
+            <button id="exit-quiz" class="btn-secondary">Выйти</button>
+        </div>
+        
+        <!-- Интегрированная пульсовая линия в карточках -->
+        <div class="card-pulse">
+            <svg class="pulse-line-svg" viewBox="0 0 150 40" preserveAspectRatio="none">
+                <path class="pulse-line-path" d="M0,20 L10,20 L15,20 L20,10 L25,30 L30,20 L35,20 L40,20 L45,20 L50,20 L55,10 L60,30 L65,20 L70,20 L75,20 L80,20 L85,20 L90,10 L95,30 L100,20 L105,20 L110,20 L115,20 L120,20 L125,10 L130,30 L135,20 L140,20 L150,20">
+                </path>
+            </svg>
+        </div>
+    </div>
+
     <!-- Экран результатов -->
     <div id="results-container" style="display: none;">
         <h1>Результаты теста</h1>
@@ -90,23 +114,3 @@
     </script>
 </body>
 </html>
-
-    <!-- Экран квиза -->
-    <div id="quiz-container" style="display: none;">
-        <div id="user-info-quiz" class="user-info"></div>
-        <div id="question-counter" class="question-counter"></div>
-        <div id="progress-bar-container">
-            <div id="progress-bar"></div>
-        </div>
-        <div id="timer" class="timer"></div>
-        <div id="question" class="question"></div>
-        <div id="options" class="options"></div>
-        <div class="quiz-buttons">
-            <button id="next-question" class="btn-primary" disabled>Далее</button>
-            <button id="exit-quiz" class="btn-secondary">Выйти</button>
-        </div>
-        
-        <!-- Интегрированная пульсовая линия в карточках -->
-        <div class="card-pulse">
-            <svg class="pulse-line-svg" viewBox="0 0 150 40" preserveAspectRatio="none">
-                <path class="pulse-line-path" d="M0,20 L10,20 L15,20 L20,10 L25,30 L30,20 L35,20 L40,20 L45,20 L50,20 L55,10 L60,30 L65,20 L70,20 L75,20 L80,20 L85,20 L90,10 L95,30 L100,20 L105,20 L110,20 L115,20 L120,20 L125
