--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Стартовый экран -->
     <div id="start-screen">
         <div id="user-info" class="user-info"></div>
-        <h1>Медицинский Квиз</h1>
+        <h1><span class="doctor-emoji">👨‍⚕️</span> Медицинский Квиз</h1>
         <div class="difficulty-selection">
             <h2>Выберите уровень сложности:</h2>
             <button class="difficulty-btn active" data-difficulty="easy">Обычный</button>
@@ -74,7 +74,7 @@
 
     <!-- Экран результатов -->
     <div id="results-container" style="display: none;">
-        <h1>Результаты теста</h1>
+        <h1><span class="doctor-emoji">👨‍⚕️</span> Результаты теста</h1>
         <div id="score" class="score">
             <div id="mode-badge" class="difficulty-badge">Анатомия</div>
             <div id="difficulty-badge" class="difficulty-badge">Обычный</div>
