--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
     <!-- Добавляем вопросы первой помощи -->
     <script src="first-aid-questions.js"></script>
     
+    <!-- Добавляем сложные вопросы первой помощи -->
+    <script src="first-aid-hard-questions.js"></script>
+    
     <!-- Инициализация описаний режимов -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
