--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
     
     <!-- 🎮 НОВЫЕ СКРИПТЫ ГЕЙМИФИКАЦИИ - добавлены в конец -->
     <script src="gamification.js"></script>
-    <script src="integration-patch.js"></script>
-    <script src="simple-sharing.js"></script>
+    <script src="final-integration.js"></script>
     <script src="debug.js"></script>
     
     <!-- Инициализация описаний режимов -->
