--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
     <!-- Система геймификации -->
     <script src="gamification.js"></script>
     
-    <!-- ПРОСТОЕ решение шеринга для VK -->
-    <script src="simple-vk-share-fix.js"></script>
+    <!-- ПРАВИЛЬНОЕ решение шеринга для VK -->
+    <script src="vk-share-correct.js"></script>
     
     <!-- Инициализация приложения -->
     <script>
